<resources>
    <string name="app_name">Meghalaya Forest Atlas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_generated">Please enter generated code to continue</string>
    <string name="details_to_continue">Please enter your details to continue</string>
    <string name="girth_cm_inch">Girth (cm/inch)</string>
    <string name="question_1">Why do we use a user code?</string>
    <string name="answer_1">The user code feature is specifically designed for individuals logging in for the first time without internet connectivity. This functionality enables users to access the app offline, allowing them to utilize its features even when they are not connected to the internet.</string>
    <string name="question_2">How can we add data for a tree?</string>
    <string name="answer_2">To input tree data, it\'s mandatory to capture two photographs. Your location will be automatically recorded using GeoCode, so please ensure your GPS is enabled. You have the flexibility to select the units for measuring height and girth based on your preference. All fields must be completed, except for the height field, which is optional. Once you save the data for the tree species, it will be stored locally on your device.</string>
    <string name="question_3">How can we synchronize the captured tree data?</string>
    <string name="answer_3">All captured data will be showcased on the Data Sync page, simplifying the process of uploading your tree data with just one click. For first-time data uploads while logged in, you\'ll need to use a user code. The system will then verify the correctness of the user code provided. If the user code is incorrect, you\'ll have the option to change it, or alternatively, proceed via username and password authentication.</string>
    <string name="question_4">How do we add a new species?</string>
    <string name="answer_4">If you come across a species that is not currently listed, you can add it by selecting the "Add species" option from the popup menu on the dashboard. When adding a species name, you must provide a brief description explaining why this species should be included. Your submission will undergo review by an administrator, and upon approval, it will be added to the species list.</string>
    <string name="question_5">How do we export and create an Excel sheet for the tree data we\'ve added?</string>
    <string name="answer_5">To generate an Excel sheet for your added tree data, tap on the "Export" button. A dialog box will appear, enabling you to filter your data by date, species, reserve forest (RF), and district. After selecting your criteria and tapping on the "Export" button, an Excel file will be created and saved in the download folder of your file manager for easy access.</string>
    <string name="height_calculated">Height calculated</string>
    <string name="desclaimer_1txt">Maintain some distance from the tree before marking.</string>
    <string name="desclaimer_2txt">Estimates the height of a tree by marking its base first.</string>
    <string name="desclaimer_5txt">Please take this into consideration while marking top and bottom of the tree, camera’s height should be fixed</string>
    <string name="desclaimer_3txt">Then mark its top</string>
    <string name="desclaimer_4txt">Please take this into consideration as the estimated height may differ from the actual height.</string>
    <string name="feet">Feet</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="confirm">Confirm</string>
    <string name="try_again">Try Again</string>
    <string name="add_tree">Add Tree</string>
    <string name="capture_image">Capture Image</string>
    <string name="asterisk">*</string>
    <string name="name_of_species">Name of Species</string>
    <string name="select_species_small">select species</string>
    <string name="select_species">Select Species</string>
    <string name="height_feet_inch">Height (meter)</string>
    <string name="empty" />
    <string name="feet_small">feet</string>
    <string name="meter_small">m</string>
    <string name="inch">in</string>
    <string name="no_of_tree">No of Tree</string>
    <string name="cm">cm</string>
    <string name="name_of_rf">Name of RF</string>
    <string name="name_of_block">Name of Plot</string>
    <string name="name_of_district">Name of District</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="location_disclaimer">GPS coordinates may vary slightly due to factors such as signal accuracy and environmental conditions.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="height_of_phone_feet">Height of Phone (feet):</string>
    <string name="mark_nbottom">Mark\nBottom</string>
    <string name="calculate">Calculate</string>
    <string name="height">Height:</string>
    <string name="mark_ntop">Mark\nTop</string>
    <string name="faq">FAQ</string>
    <string name="faqs">FAQs</string>
    <string name="welcome">Welcome !</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="user_code">User Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="login_with_code">Login with code</string>
    <string name="or">or</string>
    <string name="version_apk">v0.0.2</string>
    <string name="data_sync">Data Sync</string>
    <string name="uploading_status">Uploading Status</string>
    <string name="cancel_uploading">Cancel Uploading</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="start_upload">Start Upload</string>
    <string name="there_are_no_species_to_ndisplay">There are no species to \ndisplay</string>
    <string name="no_data_found">No Data Found</string>
    <string name="action">Action</string>
    <string name="re_enter">Re enter</string>
    <string name="history">History</string>
    <string name="add_species">Add Species</string>
    <string name="species_name">Species Name</string>
    <string name="species_name_small">species name</string>
    <string name="enter_species_name">Enter species name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="add">Add</string>
    <string name="ok">Okay</string>
    <string name="dialog_icon_description">dialog_icon_description</string>
    <string name="you_seem_to_have_entered_an_n_invalid_code">You seem to have entered an \n invalid code</string>
    <string name="please_add_valid_user_code_to_move_n_forward">Please add valid user code to move\n forward</string>
    <string name="continue_sign_in">continue Sign in</string>
    <string name="done">Done</string>
    <string name="search">search...</string>
    <string name="specify_the_phone_s_distance_nfrom_the_ground">Specify the phone\'s distance \nfrom the ground.</string>
    <string name="enter_distance_of_phone">Enter distance of phone</string>
    <string name="export_species_report">Export Species Report</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_rf">Select RF</string>
    <string name="select_block">Select Block</string>
    <string name="select_district">Select District</string>
    <string name="export">Export</string>
    <string name="select_all">Select All</string>
    <string name="tree_captured">Tree Captured</string>
    <string name="_0">0</string>
    <string name="species_found">Species Found</string>
    <string name="no_species_found">No species found</string>
    <string name="show_more">show more</string>
    <string name="img_count">Img. Count</string>
    <string name="uploaded">Uploaded</string>
    <string name="whoops">Whoops !</string>
    <string name="no_internet_connection_found_n_please_connect_to_the_internet_to_view_nthe_updated_data">No Internet Connection found\n Please connect to the internet to view \nthe updated data</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="continues">Continue</string>
    <string name="permission_disabled">Permission disabled !</string>
    <string name="please_allow_following_permissions">Please allow following permissions :</string>
    <string name="generated">Generated !</string>
    <string name="file_has_been_successfully_generated">File has been successfully generated</string>
    <string name="storage_emulated_0_download">storage/emulated/0/Download</string>
    <string name="uploading">Uploading...</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="unable_to_fetch_height_please_try_again">Unable to fetch height. Please try again</string>
    <string name="retake">Retake</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="species_uploaded">Species Uploaded</string>
    <string name="success">success</string>
    <string name="count_should_not_be_less_than_1">Count should not be less than 1</string>
    <string name="count_should_not_be_less_than_0_01">Count should not be less than 0.01</string>
    <string name="location_services">Location Services</string>
    <string name="location_services_are_disabled_do_you_want_to_enable_them">Location services are disabled. Do you want to enable them?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="data_saved_successfully">Data Saved Successfully</string>
    <string name="error">error</string>
    <string name="location_permission_denied">Location Permission denied</string>
    <string name="camera_permission_denied">Camera Permission denied</string>
    <string name="title_slide1">Effortless Data Collection</string>
    <string name="title_slide2">Insightful Dashboard Access</string>
    <string name="title_slide3">Centralized Data Management</string>
    <string name="desc_slider1">Seamlessly gather and record tree species data, including height and girth measurements, for comprehensive surveys.</string>
    <string name="desc_slider2">Access a detailed dashboard that displays all surveyed data, helping you track and analyze the health and diversity of forest ecosystems.</string>
    <string name="desc_slider3">Easily add, view, and manage tree species information specific to districts and reserve forests, ensuring accurate and organized data.</string>
    <string name="start">Start</string>
    <string name="we_need_following_permissions">We need following permissions</string>
    <string name="permission_content">By using our app, you agree to the following terms and conditions. The permissions listed below are necessary for the app to function correctly and provide you with the best user experience.</string>
    <string name="camera_permission_content">This app requires camera access to enable the capture of tree species pictures. This access ensures a seamless user experience while using the application. Additionally, the app uses the camera to estimate the height of trees.</string>
    <string name="location_permission_content">This app needs location permission to get the location of trees. This access ensures that you are provided with a seamless experience while using the application.</string>
    <string name="files_and_media">Files and media</string>
    <string name="files_media_permission_content">This app requires the Files and media permission to export species reports in CSV format. This permission allows the app to save the generated CSV files to your device\'s storage.</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="agree">Agree</string>
</resources>