<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_top_15dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_15dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/specify_the_phone_s_distance_nfrom_the_ground"
                android:textAlignment="center"

                android:textColor="@color/slight_black"
                android:textSize="@dimen/text_size_17sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/height_20dp"
                android:background="@color/accurate_height_bg"
                android:gravity="center|left"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/height"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="@dimen/height_45dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="@dimen/margin_top_5pt"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/enter_distance_of_phone"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:paddingStart="@dimen/margin_top_5pt"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/dark_gray"
                    android:visibility="visible"
                    app:boxStrokeWidth="@dimen/boxstrrokewidth_0dp"
                    app:boxStrokeWidthFocused="@dimen/boxstrokefocused_0dp"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/height_20dp"
                    android:text="@string/feet"
                    android:textColor="@color/gray_btn"
                    android:textSize="@dimen/text_size_15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/ok_btn"
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingVertical="@dimen/margin_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/text_size_13sp" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/margin_4dp"
                    android:background="@color/view_line_dark" />
                <LinearLayout
                    android:id="@+id/cancel_btn"
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingVertical="@dimen/margin_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/gray_btn"
                        android:textSize="@dimen/text_size_13sp" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:layout_width="@dimen/width_150dp"
                android:layout_height="@dimen/height_40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="@drawable/btn_bg"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp"
                android:visibility="gone" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/width_64dp"
        android:layout_height="@dimen/height_64dp"
        android:contentDescription="@string/dialog_icon_description"
        android:src="@drawable/ic_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>