<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.PermissionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20dp"
                android:src="@drawable/forestry_logo_new" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_top_5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/we_need_following_permissions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/permission_content"
                    android:textAlignment="center"
                    android:textColor="@color/slight_black"
                    android:textSize="@dimen/text_size_15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/width_30dp"
                        android:layout_height="@dimen/height_30dp"
                        android:layout_marginEnd="@dimen/dimen_10"
                        android:src="@drawable/ic_camera" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_top_5dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/camera"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/camera_permission_content"
                            android:textColor="@color/slight_black"
                            android:textSize="@dimen/text_size_15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/width_30dp"
                        android:layout_height="@dimen/height_30dp"
                        android:layout_marginEnd="@dimen/dimen_10"
                        android:src="@drawable/ic_location" />

                    <LinearLayout
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_top_5dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/location"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/location_permission_content"
                            android:textColor="@color/slight_black"
                            android:textSize="@dimen/text_size_15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/width_30dp"
                        android:layout_height="@dimen/height_30dp"
                        android:layout_marginEnd="@dimen/dimen_10"
                        android:src="@drawable/ic_files_and_media" />

                    <LinearLayout
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_top_5dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/files_and_media"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/files_media_permission_content"
                            android:textColor="@color/slight_black"
                            android:textSize="@dimen/text_size_15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10"
                android:text="@string/i_agree_to_the_terms_and_conditions"
                android:textColor="@color/slight_black"
                app:buttonTint="@color/primary" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_100dp"
        android:gravity="center">

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="@dimen/width_170dp"
            android:layout_height="@dimen/height_45dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_right_5dp"
            android:background="@color/primary"
            android:clickable="true"
            android:fontFamily="@font/montserrat_regular"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/agree"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_17sp" />

    </LinearLayout>
</LinearLayout>