<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/uploading_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/uploading_status"
        android:textColor="@color/slight_black"
        android:textSize="@dimen/text_size_15sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top_15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/margin_top_15dp"

        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:src="@drawable/ic_uploading_side"/>
        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="77%"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/text_size_15sp"
            android:layout_marginStart="@dimen/margin_right_5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploading"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/text_size_15sp"
            android:layout_marginStart="@dimen/margin_right_5dp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_8dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="@dimen/margin_top_15dp"
        android:layout_marginBottom="@dimen/height_30dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="10"
        android:progressDrawable="@drawable/progress_drawable"
        android:background="@color/gray" />


    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="@dimen/width_120dp"
        android:layout_height="@dimen/height_30dp"
        android:layout_marginTop="@dimen/margin_top_10dp"
        android:background="@color/red3"
        android:text="@string/cancel_uploading"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_13sp"
        android:textStyle="bold"
        android:visibility="gone" />


</LinearLayout>